@@ -2,17 +2,16 @@ package com.example.welcometoesprit.entities;
 
 import com.example.welcometoesprit.token.Token;
 import com.fasterxml.jackson.annotation.JsonFormat;
+import com.fasterxml.jackson.annotation.JsonIgnore;
 import jakarta.persistence.*;
 import lombok.*;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.io.Serializable;
 import java.time.LocalDateTime;
-import java.util.Collection;
-import java.util.Date;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 @Builder
 @NoArgsConstructor
@@ -21,7 +20,7 @@ import java.util.Set;
 @Getter
 @Setter
 @Table(name = "_user")
-public class User implements UserDetails {
+public class User implements UserDetails, Serializable {
 
   @Id
   @GeneratedValue
@@ -39,6 +38,7 @@ public class User implements UserDetails {
   private String password;
   private String identifiant;
 
+  @JsonFormat(pattern = "MM/dd/yyyy")
   private LocalDateTime registrationDate;
   private String cin;
   private Boolean locked=false;
@@ -75,6 +75,18 @@ public class User implements UserDetails {
     this.registrationDate=registrationDate;
   }
 
+  public User(String firstname, String lastname, String cin, String email, String numTel, String identifiant, Nationality nationality, NiveauSuivant niveauSuivant, Sexe sexe) {
+    this.firstname = firstname;
+    this.lastname = lastname;
+    this.email = email;
+    this.sexe = sexe;
+    this.nationality = nationality;
+    this.cin = cin;
+    this.numTel = numTel;
+    this.identifiant = identifiant;
+    this.niveauSuivant=niveauSuivant;
+  }
+
   @Override
   public String toString() {
     return "Student : \n" +
@@ -84,55 +96,64 @@ public class User implements UserDetails {
   }
 
 
-
+  @JsonIgnore
   @Enumerated(EnumType.STRING)
   private Status status=Status.Active;
-
   @OneToMany(mappedBy = "user")
+  @JsonIgnore
   private List<Token> tokens;
 
-
+  @JsonIgnore
   private Integer warnings=0;
 
-
+  @JsonIgnore
   @OneToMany(mappedBy = "user")
   private List<Rating> ratings;
   @ManyToOne
+  @JsonIgnore
   Event event;
+  @JsonIgnore
   @ManyToOne
   Event event2;
+  @JsonIgnore
   @OneToMany(cascade= CascadeType.ALL, mappedBy = "complaintPar")
   List<Complaint> listOfComplaints;
-
+  @JsonIgnore
   @OneToMany(cascade= CascadeType.ALL, mappedBy = "publierPar")
   List<Publication> listOfPublication;
-
+  @JsonIgnore
   @OneToMany(cascade= CascadeType.ALL, mappedBy = "signalPar")
   List<SignalPost> signalPosts;
+  @JsonIgnore
+  @OneToMany(cascade= CascadeType.ALL, mappedBy = "user")
+  List<React> reacts;
+  @JsonIgnore
   @ManyToMany(mappedBy = "likerPar",cascade = CascadeType.ALL)
   private Set<Publication> listPublicationLikee;
-
+  @JsonIgnore
   @OneToMany(mappedBy = "CommentPar",cascade = CascadeType.ALL)
   private Set<Comment> comments;
-
+  @JsonIgnore
   @ManyToOne
   Realisation realisation;
 
   @OneToOne
+  @JsonIgnore
   Interview interviewStudent;
 
 
   @OneToMany(cascade = CascadeType.ALL,mappedBy = "evaluator")
+  @JsonIgnore
   private Set<Interview> InterviewEvaluators;
-
+  @JsonIgnore
   @OneToMany(cascade = CascadeType.ALL)
   private Set<FileEntity> files;
-
+  @JsonIgnore
   @ManyToMany(cascade= CascadeType.ALL)
   private Set<Classroom> classroomSet;
   @Override
   public Collection<? extends GrantedAuthority> getAuthorities() {
-    return List.of(new SimpleGrantedAuthority(role.name()));
+    return Collections.emptyList();
   }
 
   @Override
